--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,17 +31,16 @@ Signed in as Admin <b><%= @current_admin.name %></b> <%= link_to "(Sign Out)", a
 	 	 <li><%= link_to "Sign In", signin_path %></li>
 	 	 <% else %>
 	 	 	<li><%= link_to "Sign Out", signout_path %></li>
-	 	 	
 	 	 <%end %>
 	 	 <li><%= link_to "Home", pages_home_path %></li>
-		 <li><%= link_to "Plan your Journey", pages_help_path %></li>
  		 <li><%= link_to "Bridge Locations", markers_path %></li>
  		 <li><%= link_to "About", about_path %></li>
 	</ul>
+	<% if signed_in? %>
 	<div> <%= form_tag('/help') do %>
-		<%= select_tag "vehicles", options_from_collection_for_select(@vehicles, "id", "decription"), prompt: "Select your vehicle" %>
-		
-		<%= submit_tag 'Submit Vehicle' %> <br /></div>
+		<%= select_tag "vehicles", options_from_collection_for_select(@vehicles, "id", "decription"), prompt: "Select your vehicle" %>	
+		<%= submit_tag 'Submit Vehicle to Plan your Journey with' %> <br /></div>
+	<% end %>
 	<% end %>
 </div>
  <% else %>
@@ -50,8 +49,12 @@ Signed in as Admin <b><%= @current_admin.name %></b> <%= link_to "(Sign Out)", a
 	     <% else %>
 	 	 <li><%= link_to "Home", pages_home_path %></li>
  		 <li><%= link_to "Test Page", pages_contact_path %></li>
+ 		 <% if !adminsigned_in? %>
 		 <li><%= link_to "Plan your Journey", pages_help_path %></li>
+ 		 <% else %>
+ 		 <%end %>
  		 <li><%= link_to "Bridge Locations", markers_path %></li>
+  		 <li><%= link_to "Users", users_path %></li>
   	 	 <li><%= link_to "Edit Account", admin_path(@current_admin)%></li>
 
  	<%end %>
