--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -37,8 +37,8 @@ function initialize() {
     computeTotalDistance(directionsDisplay.getDirections());
   });
 }
-
 function calcRoute() {
+
   var narrowCount = 0;
     var count = 0;
     var dangercount = 0;
@@ -46,6 +46,9 @@ function calcRoute() {
     var bridge = new google.maps.LatLng(<%= m.latitude %>, <%= m.longitude %>);
     //var myHeight = <%= m.height %>;
     var vehicleHeight = <%= @vehicle.height %>;
+    var vehicleDes = "<%= @vehicle.decription %>";
+    document.getElementById('vehicle').innerHTML = vehicleHeight + " meters";
+    document.getElementById('vehicleDes').innerHTML = vehicleDes;
     var markerz = new google.maps.Marker({position:bridge});
     markerz.setMap(map); 
   <% end %>
@@ -185,7 +188,8 @@ google.maps.event.addDomListener(window, 'load', initialize);
       <label for="start">Start point:</label><input type="text" id="start" value="Newbrook road, Mullingar"> <br>
       <label for="stop">Stop point:</label><input type="text" id="stop" value="Harbour Street, Mullingar"> <br>
       <label for="dest">Destination:</label><input type="text" id="dest" value="Athboy">  <br>
-      <label for="">Vehicle Height(m):</label><p id="vehicle" > </p> <br>  <br>
+      <label for="">Vehicle Height(m):</label><p id="vehicle" > </p> 
+      <label for="">Chosen Vehicle:</label><p id="vehicleDes" > </p> 
 
 
   </b><br>
@@ -200,8 +204,6 @@ google.maps.event.addDomListener(window, 'load', initialize);
   </form>
         <button type="submit" onclick= "calcRoute()"> Submit </button> <br> <br>
         <input type="submit" value="Clear Page" onClick="window.location.reload()">
-
-
     <div id="directionsPanel" style="float:right;width:44%;height 100%"> </div>
  </center>
 
