--- a/app/views/vehicles/_form.html.erb
+++ b/app/views/vehicles/_form.html.erb
@@ -16,7 +16,7 @@
     <%= f.text_field :reg %>
   </div>
   <div class="field">
-    <%= f.label :decription %><br />
+    <%= f.label "Description" %><br />
     <%= f.text_field :decription %>
   </div>
   <div class="field">
