--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -121,7 +121,7 @@ var contentString = '<div class="infowin">' +
         '<table class = "infotable" width="190" border="0" cellpadding="0" cellspacing="3">' +
         '<tr>' +
          '<th scope="row">Height:</th>' +
-      '<td>' + height + 'm </td>' +
+      '<td> <b><i>' + height + 'm</i></b> </td>' +
       '</tr>'  +
       '<th scope="row">Latitude:</th>' +
       '<td>' + <%= m.latitude %> + '<br />' +
@@ -218,8 +218,7 @@ function computeTotalDistance(result) {
   google.maps.event.addDomListener(window, 'load', initialize);
    </script>
    <body>
-  <div style="color:#58ACFA">
-
+<div id= "mydiv2">
 
   <H2>  Please enter your starting point and destination </H2>
   <form id= "routeform"> <b>
@@ -233,7 +232,7 @@ function computeTotalDistance(result) {
 
 
   </b><br>
- <div style="margin: 10px 0px 10px 700px; background-color: white; width: 300px; border: 2px solid Grey">
+ <div id= "resultdiv" style="margin: 10px 0px 10px 700px; background-color: white; width: 300px; border: 2px solid Grey">
   <p><b><span id="total", :placeholder => Route Details will load here </span></b></p>
   <br /> <p id="points"></p>
   <br /> <p id="boxes"></p>
@@ -244,11 +243,12 @@ function computeTotalDistance(result) {
     </div> 
   </form>
       <button type="submit" onclick= "calcRoute()"> Submit </button> 
-      <input type="submit" value="Clear Page" onClick="window.location.reload()">
+      <INPUT TYPE="button" onClick="history.go(0)" VALUE="Clear Page">
+
     <h2> Bridges along your route: </h2>
-        <div id="directionsPanel" style="float:left;width:55%;height 90%"> </div>
+        <div id="resultdiv" style="float:left;width:55%;height 90%"> </div>
      <div style="margin: 10px 0px 10px 700px; background-color: white; width: 300px; border: 2px solid Grey">
-     <p id="locations"></p>
+     <b><p id="locations"></p></b>
      </div>
  </center>
 
