--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -109,7 +109,7 @@ var contentString = '<div class="infowin">' +
         '<table class = "infotable" width="190" border="0" cellpadding="0" cellspacing="3">' +
         '<tr>' +
          '<th scope="row">Height:</th>' +
-      '<td>' + height + 'm </td>' +
+      '<td> <b><i>' + height + 'm</i></b> </td>' +
       '</tr>'  +
       '<th scope="row">Latitude:</th>' +
       '<td>' + <%= m.latitude %> + '<br />' +
@@ -188,13 +188,13 @@ google.maps.event.addDomListener(window, 'load', initialize);
       <label for="start">Start point:</label><input type="text" id="start" value="Newbrook road, Mullingar"> <br>
       <label for="stop">Stop point:</label><input type="text" id="stop" value="Harbour Street, Mullingar"> <br>
       <label for="dest">Destination:</label><input type="text" id="dest" value="Athboy">  <br>
-      <label for="">Vehicle Height(m):</label><p id="vehicle" > </p> 
-      <label for="">Chosen Vehicle:</label><p id="vehicleDes" > </p> 
-
+      
 
   </b><br>
-  <div style="margin: 10px 0px 10px 700px; background-color: white; width: 200px; border: 2px solid Grey">
-  <p><b><span id="total", :placeholder => Route Details will load here </span></b></p>
+  <div id= "resultdiv" style="margin: 10px 0px 10px 700px; background-color: white; width: 200px; border: 2px solid Grey">
+    <label for="">Vehicle Height(m):</label><b><p id="vehicle" > </p></b> 
+      <label for="">Chosen Vehicle:</label><b><p id="vehicleDes" > </p></b>
+  <p id="total"><b><span id="total", :placeholder => Route Details will load here </span></b></p>
   <p id="bridgeroute"><br /></p>
   <h5 id="h5style"><p id="bridgeroute2"></p></h5> 
   <h5 id="h5style"><p id="narrowbridge"></p></h5>
@@ -203,7 +203,6 @@ google.maps.event.addDomListener(window, 'load', initialize);
     </div>
   </form>
         <button type="submit" onclick= "calcRoute()"> Submit </button> <br> <br>
-        <input type="submit" value="Clear Page" onClick="window.location.reload()">
     <div id="directionsPanel" style="float:right;width:44%;height 100%"> </div>
  </center>
 
