--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -39,7 +39,7 @@ map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
 
 var contentString = '<div class="infowin">' +
         '<h5 id="h5style">Bridge Details</h5>' +
-        '<table class = "infotable" width="190" border="0" cellpadding="0" cellspacing="3">' +
+        '<table class = "infopopup" width="190" border="0" cellpadding="0" cellspacing="3">' +
         '<tr>' +
          '<th scope="row">Address:</th>' +
       '<td>' + "<%= m.address %>" + '</td>' +
