--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -106,7 +106,7 @@ var myBox = [latlng1, latlng2, latlng3, latlng4];
 
 var contentString = '<div class="infowin">' +
         '<h5 id="h5style">LOW BRIDGE</h5>' +
-        '<table class = "infotable" width="190" border="0" cellpadding="0" cellspacing="3">' +
+        '<table class = "infopopup" width="190" border="0" cellpadding="0" cellspacing="3">' +
         '<tr>' +
          '<th scope="row">Height:</th>' +
       '<td> <b><i>' + height + 'm</i></b> </td>' +
@@ -122,7 +122,7 @@ var contentString = '<div class="infowin">' +
 
 var narrowString = '<div class="infowin">' +
         '<h5 id="h5style">NARROW BRIDGE</h5>' +
-        '<table class = "infotable" width="190" border="0" cellpadding="0" cellspacing="3">' +
+        '<table class = "infopopup" width="190" border="0" cellpadding="0" cellspacing="3">' +
         '<tr>' +
       '<th scope="row">Latitude:</th>' +
       '<td>' + <%= m.latitude %> + '<br />' +
