updated route so that trailer height is considered

--- a/app/views/blogmailer/register.html.erb
+++ b/app/views/blogmailer/register.html.erb
@@ -4,11 +4,17 @@
  	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
  </head>
    <body>
- 	<h1>Welcome to our movie blog site, <%= @user.name %></h1> 
- 	<p>       You have successfully signed up   </p>  
- 	<p>Thanks for joining, plan your next route now!!!!</p> 
- 	<p>Kind Regards</p> 
- 	<p>CEO</p> 
- 	<p>Andrew Rice</p> 
+   <div id= "mydiv">
+ 	<h1 style="color:#045FB4">Welcome to Route Planner Pro!</h1> 
+ 	 <p> Dear <b><%= @user.name %></b>, </p>
+ 	<p>You have successfully signed up.   </p>  
+ 	<p> <b> Username: </b> <%= @user.email %> <br />
+
+ 	<p>Plan your next route now!</p> 
+ 	<p>Kind Regards, <br /> 
+ 	<i>Andrew Rice </i></p>
+ 	<p style="color:#045FB4">CEO Route Planner Pro</p> 
+ 	
+ 	</div> 
    </body> 
  </html> 
