--- a/app/views/vehicles/_form.html.erb
+++ b/app/views/vehicles/_form.html.erb
@@ -31,7 +31,8 @@
 
     <div id="ddd">
     <%= f.label "Trailer Height(m)" %><br />
-    <%= f.text_field :trailer %>
+    <%= f.text_field :trailerheight %>
+   
   </div>
   <br />
      <div class="field">
