--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,9 +41,12 @@ Signed in as Admin <b><%= @current_admin.name %></b> <%= link_to "(Sign Out)", a
  		 <li><%= link_to "About", about_path %></li>
 	</ul>
 	<% if signed_in? %>
+	<% if @vehicles != nil %>
 	<div> <%= form_tag('/help') do %>
 		<%= select_tag "vehicles", options_from_collection_for_select(@vehicles, "id", "decription"), prompt: "Select your vehicle" %>	
 		<%= submit_tag 'Submit Vehicle to Plan your Journey with' %> <br /></div>
+
+	<% end %>
 	<% end %>
 	<% end %>
 </div>
