--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -42,11 +42,8 @@ function calcRoute() {
   var narrowCount = 0;
     var count = 0;
     var dangercount = 0;
-    var trailerHeight = 0;
-    var trailer = 0;
-    var overallHeight = 0;
   <% @markers.each do |m| %>                  
-    var bridge = new google.maps.LatLng(<%= m.latitude %>, <%= m.longitude %>);
+       var bridge = new google.maps.LatLng(<%= m.latitude %>, <%= m.longitude %>);
     var vehicleHeight = <%= @vehicle.height %>;
     mytrailerHeight = <%= @vehicle.trailerheight %> + " ";
     trailerHeight = parseFloat(mytrailerHeight);
@@ -64,7 +61,7 @@ function calcRoute() {
       alert("Error in dealing with trailer and vehicle height: help.html");
   }
 
-    var clearance = overallHeight + 0.5;
+    var clearance = overallHeight + 1.5;
     var vehicleDes = "<%= @vehicle.decription %>";
     document.getElementById('vehicle').innerHTML = vehicleHeight + " meters";
     document.getElementById('vehicleDes').innerHTML = vehicleDes;
@@ -72,7 +69,7 @@ function calcRoute() {
     var markerz = new google.maps.Marker({position:bridge});
     markerz.setMap(map); 
   <% end %>
-
+  console.log("Clearance: " + clearance + " OVerall: " + overallHeight);
   var startPoint = document.getElementById("start").value
   var endPoint = document.getElementById("dest").value
   var stopPoint = document.getElementById("stop").value
@@ -99,6 +96,9 @@ function calcRoute() {
   if(overview_path = null) {
         alert("Invalid route, please try again");
 }
+  var boxes = routeBoxer.box(path, distance);
+  //var vehicleHeight = document.getElementById("vehicle").value
+  //var intVehicle = parseInt(vehicleHeight)
 
 <% @markers.each do |m| %> 
   var bridge1 = new google.maps.LatLng(<%= m.latitude %>, <%= m.longitude %>);  
@@ -174,9 +174,6 @@ if(google.maps.geometry.poly.containsLocation(bridge1, withinBox)){
           infowindow.open(map, marker1);  
             document.getElementById('bridgeroute2').innerHTML = "Number of bridges too low your route: " + dangercount;
         }
-        else {
-          console.log(height);
-        }
       }
   }
 }
@@ -206,15 +203,15 @@ google.maps.event.addDomListener(window, 'load', initialize);
       <div id="map-canvas" style="float:left" padding="10px"> <br ></div>
       <br />
       <label for="start">Start point:</label><input type="text" id="start" value="Newbrook road, Mullingar"> <br>
-      <label for="stop">Stop point:</label><input type="text" id="stop" value="Dominick Street, Mullingar"> <br>
+      <label for="stop">Stop point:</label><input type="text" id="stop" value="Ashe Road, Mullingar"> <br>
       <label for="dest">Destination:</label><input type="text" id="dest" value="Athboy">  <br>
       
 
   </b><br>
   <div id= "resultdiv" style="margin: 10px 0px 10px 700px; background-color: white; width: 200px; border: 2px solid Grey">
-    <label for="">Vehicle Height:</label><b><p id="vehicle" > </p></b> 
-    <label for="">Trailer Height:</label><b><p id="vehicletrailer" > </p></b> 
-    <label for="">Chosen Vehicle:</label><b><p id="vehicleDes" > </p></b>
+   <label for="">Vehicle Height(m):</label><b><p id="vehicle" > </p></b> 
+   <label for="">Chosen Vehicle:</label><b><p id="vehicleDes" > </p></b>
+   <label for="">Trailer Height:</label><b><p id="vehicletrailer" > </p></b> 
   <p id="total"><b><span id="total", :placeholder => Route Details will load here </span></b></p>
   <p id="bridgeroute"><br /></p>
   <h5 id="h5style"><p id="bridgeroute2"></p></h5> 
