--- a/app/views/admins/_form.html.erb
+++ b/app/views/admins/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@admin) do |f| %>
+<%= form_for @admin, :validate => true do |f| %>
   <% if @admin.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@admin.errors.count, "error") %> prohibited this admin from being saved:</h2>
@@ -11,6 +11,7 @@
     </div>
   <% end %>
 
+  <p class="text-warning"> Enter your details below:</p>
   <div class="field">
     <%= f.label :name %><br />
     <%= f.text_field :name %>
