--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -4,10 +4,10 @@
   <div style="background-color: white; width: 700px; border: 2px solid Grey">
 <p> This application was designed to aid Heavy Goods Vehicles create a route based on the height of their vehicle. 
 	A user must create an account and add vehicle in order to create a route. The user then selects the vehicle they wish to use for their journey. If your vheicle has a trailer, Route Planner Pro will check 
-	to to which is higher and compare it to the bridge heights. <b>Route Planner also adds 0.5 meters for clearance.</b>
+	to to which is higher and compare it to the bridge heights. <p><b>Route Planner adds 0.5 meters to the height of the vehicle or trailer to ensure a safe amount of clearance.</b>
 </p><br/> <p> <center> <b>This application is accurate to within 0.1 Kilometers. </b></center></p><br />
 
-<p> <b> Contact: </b> routeplannerproireland@gmail.com </p>
+<p> <b> Contact: </b> <a href="mailto:someone@example.com?Subject=Hello%20again" target="_top"> routeplannerproireland@gmail.com </p>
 </div>
 <p>The map below shows a map containing every bridge location in the Republic of Ireland</p> <br />
 <%= image_tag("bridge1.png", :size => "350x450") %>
